<resources>
    <string name="app_name">CalculadoraSimples</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="resultado">Resultado</string>
    <string name="dropdown_for_operation_select">Dropdown for operation select</string>
    <string name="digite_um_valor">Digite um valor:</string>
    <string name="divisao">/</string>
    <string name="multiplicacao">X</string>
    <string name="soma">+</string>
    <string name="subtracao">-</string>

    <string-array name="operation_array">
        <item>Selecione um item</item>
    </string-array>
</resources>