<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextValue1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_Valor1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextValue2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_Valor"
        app:layout_constraintTop_toBottomOf="@+id/editTextValue1"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_Resultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:gravity="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValue2" />

    <TextView
        android:id="@+id/text_Valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/digite_um_valor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextValue1"
        app:layout_constraintEnd_toStartOf="@+id/editTextValue1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextValue1" />

    <TextView
        android:id="@+id/text_Valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/digite_um_valor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextValue2"
        app:layout_constraintEnd_toStartOf="@+id/editTextValue2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextValue2" />

    <Button
        android:id="@+id/button_soma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_subtracao"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Resultado"
        app:layout_constraintVertical_bias="0.136" />

    <Button
        android:id="@+id/button_divisao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divisao"
        app:layout_constraintBottom_toBottomOf="@+id/button_multiplicacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_multiplicacao"
        app:layout_constraintTop_toTopOf="@+id/button_multiplicacao"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_multiplicacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplicacao"
        app:layout_constraintBottom_toBottomOf="@+id/button_subtracao"
        app:layout_constraintEnd_toStartOf="@+id/button_divisao"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_subtracao"
        app:layout_constraintTop_toTopOf="@+id/button_subtracao"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_subtracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtracao"
        app:layout_constraintBottom_toBottomOf="@+id/button_soma"
        app:layout_constraintEnd_toStartOf="@+id/button_multiplicacao"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_soma"
        app:layout_constraintTop_toTopOf="@+id/button_soma"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>